// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHead should match snapshot 1`] = `
<thead>
  <tr>
    <th />
    <Student
      key="student"
      name="student"
    />
    <Student
      key="student2"
      name="student2"
    />
    <Student
      key="student3"
      name="student3"
    />
  </tr>
</thead>
`;

exports[`TableHead should match snapshot with empty list of students 1`] = `
<thead>
  <tr>
    <th />
  </tr>
</thead>
`;
